# BlackJackProjectKTS

./: .gitignore  1111.py  Dockerfile  README.md  alembic.ini  config.yml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: d136f48b2fb5_first_migration.py  fb5d4d795899_first.py
app/admin/: models.py
app/blackjack/: models.py  routes.py  schemes.py  views.py
app/quiz/: models.py
app/store/: __init__.py
app/store/admin/: accessor.py
app/store/blackjack/: accessor.py
app/store/bot/: deck.py  manager.py  rules.py  state.py
app/store/database/: database.py
app/store/quiz/: accessor.py
app/store/vk_api/: accessor.py  dataclasses.py
app/web/: app.py  config.py  routes.py  utils.py
