[tool.poetry]
name = "blackjackprojectkts"
version = "0.1.0"
description = ""
authors = ["cherrykolya <66125757+cherrykolya@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yarl = "^1.8.2"
aiohttp = "^3.8.3"
aiohttp-apispec = "^2.2.3"
aiohttp-session = "^2.12.0"
cryptography = "^39.0.0"
gino = "^1.0.1"
pyyaml = "^6.0"
alembic = "^1.9.1"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
